fixed grid issues with overflow when shrinking window

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,6 +2,7 @@
 * {
        margin: 0;
        padding: 0;
+       box-sizing:border-box;
    }
 
 
@@ -143,6 +144,7 @@ main{
     flex-direction: column;
     justify-self: center;
     max-width: 1000px;
+    width:100%;
     text-align:left;
     padding-bottom:100px;
 }
@@ -151,15 +153,19 @@ main h2{
     text-align: left;
     font-weight:normal;
     font-size: 2rem;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 main .card-container{
     display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(290px,1fr));
+    max-width:1000px;
+    width:100%;
     grid-auto-rows: 325px;
     gap: 50px;
-    max-width:1000px;
     padding-top:15px;
+    padding-inline:15px;
 }
 
 main .card{
